# pde-lab

./: fem.py  gen-mesh.py  gmsh1.py  integrate2d.py  main.py  mesh-read.py  mesh-writer.py  meshgen.py  pyproject.toml  refex.py  requirements.txt  scikitfem.py  test.py  test1d.py  triangle.py
.github/workflows/: main.yml
assemble/: grad_dot_grad.py  matrix.py  vector.py
assembly/: grad_dot_grad.py  matrix.py
elements/: base_element.py  element.py  line.py  line3.py  quadrilateral.py  triangle.py
examples/: pyproject.toml
examples/misc/: main.py  pyproject.toml
examples/scikit-fem/: ex01.py  (+2 more)
integrators/: base_integrator.py  triangle0_integrator.py
lib/: pyproject.toml
lib/assemble/: matrix.py  vector.py
lib/elements/: line.py  quadrilateral.py
lib/pardeqsi/: solver.py
lib/pardeqsi/assemble/: vector.py
lib/pardeqsi/mesh/: boundary.py  meshio.py
lib/tests/assemble/: test_matrix.py  test_vector.py
lib/tests/elements/: test_line.py  test_line3.py  test_quadrilateral.py  test_triangle.py
lib/tests/mesh/: test_boundary.py
mesh/: boundary.py  generate.py  mesh.py
pardeqsi/: README.md  pyproject.toml
pardeqsi/src/pardeqsi/assemble/: matrix.py  vector.py
pardeqsi/src/pardeqsi/elements/: element.py  line.py  line3.py  quadrilateral.py  triangle.py
pardeqsi/src/pardeqsi/mesh/: generate.py  mesh.py
pardeqsi/src/pardeqsi/quadrature/: line.py  triangle.py
pardeqsi/tests/assemble/: test_vector.py
pardeqsi/tests/elements/: helpers.py  test_line.py
quadrature/: base.py  triangle.py
tests/: test_assemble.py  test_assembly.py  triangle.py
(+7 files in other folders)
