[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pardeqsi"
version = "0.0.1"
dependencies = [
    "numpy",
    "scipy",
]
requires-python = ">=3.13"

[tool.ruff]
line-length = 88

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.pyright]
exclude = [
    "**/__pycache__"
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
