[project]
name = "pardeqsi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jan Marthedal Rasmussen", email = "jan@janmr.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "scipy>=1.16.2",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
